PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? ????, PHP 7.4.7

- Core:
  . Fixed bug #79566 (Private SHM is not private on Windows). (cmb)

- SimpleXML:
  . Fixed bug #79528 (Different object of the same xml between 7.4.5 and
    7.4.4). (cmb)

- Standard:
  . Fixed bug #79561 (dns_get_record() fails with DNS_ALL). (cmb)

?? ??? ????, PHP 7.4.6

- Core:
  . Fixed bug #79536 (zend_clear_exception prevent exception's destructor to be
    called). (Laruence)
  . Fixed bug #78434 (Generator yields no items after valid() call). (Nikita)
  . Fixed bug #79477 (casting object into array creates references). (Nikita)
  . Fixed bug #79514 (Memory leaks while including unexistent file). (cmb,
    Nikita)

- DOM:
  . Fixed bug #78221 (DOMNode::normalize() doesn't remove empty text nodes).
    (cmb)

- EXIF:
  . Fixed bug #79336 (ext/exif/tests/bug79046.phpt fails on Big endian arch).
    (Nikita)

- FCGI:
  . Fixed bug #79491 (Search for .user.ini extends up to root dir). (cmb)

- MBString:
  . Fixed bug #79441 (Segfault in mb_chr() if internal encoding is unsupported).
    (Girgias)

- OpenSSL:
  . Fixed bug #79497 (stream_socket_client() throws an unknown error sometimes
    with <1s timeout). (Joe Cai)

- PCRE:
  . Upgraded to PCRE2 10.34. (cmb)

- Phar:
  . Fixed bug #79503 (Memory leak on duplicate metadata). (cmb)

- SPL:
  . Fixed bug #69264 (__debugInfo() ignored while extending SPL classes). (cmb)
  . Fixed bug #67369 (ArrayObject serialization drops the iterator class).
    (Alex Dowad)

- Standard:
  . Fixed bug #79468 (SIGSEGV when closing stream handle with a stream filter
    appended). (dinosaur)
  . Fixed bug #79447 (Serializing uninitialized typed properties with __sleep
    should not throw). (nicolas-grekas)

?? ??? ????, PHP 7.4.5

- Core:
  . Fixed bug #79364 (When copy empty array, next key is unspecified). (cmb)